# CoverageActiveSLAM

./: README.md
navigation_stack/src/coverage_mapper/: CMakeLists.txt  package.xml
navigation_stack/src/coverage_mapper/cfg/: coverage_mapper.yaml
navigation_stack/src/coverage_mapper/include/coverage_mapper/: coverage_mapper.h
navigation_stack/src/coverage_mapper/launch/: coverage_mapper.launch
navigation_stack/src/coverage_mapper/src/: coverage_mapper.cpp  coverage_mapper_node.cpp
navigation_stack/src/coverage_navigator/: CMakeLists.txt  package.xml
navigation_stack/src/coverage_navigator/cfg/: coverage_navigator.yaml
navigation_stack/src/coverage_navigator/include/coverage_navigator/: dynamic_planner.h  global_traverser.h  stuck_escaper.h  utilities.h  wall_follower.h  zigzag_walker.h
navigation_stack/src/coverage_navigator/launch/: coverage_navigator.launch
navigation_stack/src/coverage_navigator/src/: coverage_navigator_node.cpp  dynamic_planner.cpp  global_traverser.cpp  stuck_escaper.cpp  utilities.cpp  wall_follower.cpp  zigzag_walker.cpp
navigation_stack/src/map_converter/: CMakeLists.txt  package.xml
navigation_stack/src/map_converter/cfg/: map_converter.yaml
navigation_stack/src/map_converter/launch/: map_converter.launch
navigation_stack/src/map_converter/src/: map_converter.cpp  map_converter_node.cpp
navigation_stack/src/odometry_publisher/: CMakeLists.txt  package.xml
navigation_stack/src/odometry_publisher/cfg/: odometry_publisher.yaml
navigation_stack/src/odometry_publisher/launch/: odometry_publisher.launch
navigation_stack/src/odometry_publisher/src/: odometry_publisher_node.cpp
navigation_stack/src/virtual_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
navigation_stack/src/virtual_layer/cfg/: VirtualLayer.cfg
navigation_stack/src/virtual_layer/include/virtual_layer/: VirtualLayer.h
navigation_stack/src/virtual_layer/src/: VirtualLayer.cpp
navigation_stack/src/virtual_layer_processor/: CMakeLists.txt  package.xml
navigation_stack/src/virtual_layer_processor/cfg/: virtual_layer_processor.yaml
navigation_stack/src/virtual_layer_processor/launch/: virtual_layer_processor.launch
navigation_stack/src/virtual_layer_processor/src/: virtual_layer_processor.cpp  virtual_layer_processor_node.cpp
settings/src/configuration/: CMakeLists.txt  package.xml
settings/src/configuration/cfg/navigation_stack/: move_base.yaml
settings/src/configuration/launch/: caslam.launch  caslam_test.launch  environment.launch  move_base.launch  navigation.launch  rviz.launch  slam.launch
settings/src/configuration/rviz/: caslam.rviz
simulation_stack/src/custom_msgs/: CMakeLists.txt  package.xml
simulation_stack/src/custom_msgs/msg/: DetectionState.msg  WheelSpeed.msg
simulation_stack/src/custom_msgs/msg/virtual_layer/: Obstacles.msg  Zone.msg
simulation_stack/src/custom_srvs/: CMakeLists.txt  package.xml
simulation_stack/src/custom_srvs/srv/: Escape.srv  Obstacle.srv  Zigzag.srv  Zone.srv
simulation_stack/src/robot_creator/: CMakeLists.txt  package.xml
simulation_stack/src/robot_creator/launch/: robot_creator.launch
simulation_stack/src/robot_creator/src/: flat_world_imu_node.cpp
simulation_stack/src/robot_creator/urdf/: convert_tutorial.txt  robot.sdf  robot.urdf
simulation_stack/src/sensor_states_generator/: CMakeLists.txt  package.xml
simulation_stack/src/sensor_states_generator/cfg/: sensor_states_generator.yaml
simulation_stack/src/sensor_states_generator/launch/: sensor_states_generator.launch
simulation_stack/src/sensor_states_generator/src/: sensor_states_generator.cpp  sensor_states_generator_node.cpp
simulation_stack/src/world_builder/: CMakeLists.txt  package.xml
simulation_stack/src/world_builder/launch/: world_builder.launch
simulation_stack/src/world_builder/worlds/: house.world
slam_stack/src/cartographer/: CMakeLists.txt
(+199 files in other folders)
