<?xml version="1.0"?>
<package>
  <name>virtual_layer</name>
  <version>0.0.0</version>
  <description>The virtual_layer package</description>

  <maintainer email="richeyhuang22@hotmail.com">Richey</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>custom_msgs</run_depend>
  <run_depend>tf</run_depend>

<export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
  
</package>
