<?xml version="0.0"?>
<package>
  <name>custom_srvs</name>
  <version>0.0.0</version>
  <description>customed services</description>

  <maintainer email="richeyhuang22@hotmail.com">Richey</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>custom_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
